# Aggregation

./: CMakeLists.txt  README.md
script/: printSphere.m
src/: CMakeLists.txt
src/aggregate/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  getopts.h  math_utils.cpp  math_utils.h  octree.h  vector_math.h
src/core/: CMakeLists.txt  aggregate.h  control.cpp  control.h  file.cpp  file.h  sphere.h
